--- a/.github/workflows/e2e-workflow.yml
+++ b/.github/workflows/e2e-workflow.yml
@@ -24,6 +24,7 @@ on:
       k8s_version:
         type: string
         default: "1.30.0"
+    secrets:
       hf_token:
         type: string
 
@@ -117,7 +118,7 @@ jobs:
           AZURE_CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
           E2E_ACR_REGISTRY: ${{ env.CLUSTER_NAME }}.azurecr.io
           E2E_ACR_REGISTRY_SECRET: ${{ env.CLUSTER_NAME }}-acr-secret
-          HF_TOKEN: ${{ inputs.hf_token }}
+          HF_TOKEN: ${{ secrets.hf_token }}
 
       - name: Run fast e2e test
         if: ${{ !inputs.isRelease }}
@@ -130,7 +131,7 @@ jobs:
           AZURE_CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
           E2E_ACR_REGISTRY: ${{ env.CLUSTER_NAME }}.azurecr.io
           E2E_ACR_REGISTRY_SECRET: ${{ env.CLUSTER_NAME }}-acr-secret
-          HF_TOKEN: ${{ inputs.hf_token }}
+          HF_TOKEN: ${{ secrets.hf_token }}
 
 
       - name: Cleanup e2e resources
