--- a/.github/workflows/workspace-e2e.yml
+++ b/.github/workflows/workspace-e2e.yml
@@ -17,7 +17,6 @@ permissions:
 
 jobs:
   run-e2e:
-    environment: e2e-test
     strategy:
       fail-fast: false
       matrix:
@@ -30,4 +29,5 @@ jobs:
     with:
       git_sha: ${{ github.event.pull_request.head.sha }}
       node_provisioner: ${{ matrix.node-provisioner }}
+    secrets:
       hf_token: ${{ secrets.HF_TOKEN }}
