--- a/.github/workflows/e2e-workflow.yml
+++ b/.github/workflows/e2e-workflow.yml
@@ -25,8 +25,7 @@ on:
         type: string
         default: "1.30.0"
     secrets:
-      hf_token:
-        type: string
+      hf_token: {}
 
 jobs:
   e2e-tests:
