--- a/docs/custom-model-integration/reference-image-deployment.yaml
+++ b/docs/custom-model-integration/reference-image-deployment.yaml
@@ -14,7 +14,7 @@ inference:
     spec:
       containers:
         - name: custom-llm-container
-          image: ghcr.io/kaito-project/kaito/llm-reference-preset:latest # Kaito Reference Image
+          image: ghcr.io/kaito-project/kaito/llm-reference-preset:latest # KAITO Reference Image
           livenessProbe:
             failureThreshold: 3
             httpGet:
