feat: add ttlSecondsAfterFinished for fine tune

--- a/charts/kaito/workspace/crds/kaito.sh_workspaces.yaml
+++ b/charts/kaito/workspace/crds/kaito.sh_workspaces.yaml
@@ -792,6 +792,11 @@ spec:
                 required:
                 - name
                 type: object
+              ttlSecondsAfterFinished:
+                description: TtlSecondsAfterFinished specifies the time to live for
+                  the tuning workspace after it has finished.
+                format: int64
+                type: integer
             required:
             - input
             - output
