--- a/charts/kaito/workspace/templates/clusterrole.yaml
+++ b/charts/kaito/workspace/templates/clusterrole.yaml
@@ -8,7 +8,7 @@ metadata:
 rules:
   - apiGroups: ["kaito.sh"]
     resources: ["workspaces"]
-    verbs: ["update", "patch","get","list","watch"]
+    verbs: ["update", "patch","get","list","watch", "delete"]
   - apiGroups: ["kaito.sh"]
     resources: ["workspaces/status"]
     verbs: ["update", "patch","get","list","watch"]
