--- a/presets/ragengine/requirements.txt
+++ b/presets/ragengine/requirements.txt
@@ -1,22 +1,22 @@
 # RAG Library Requirements
-llama-index
+llama-index==0.12.17
 # HF Embeddings
-llama-index-embeddings-huggingface
-llama-index-embeddings-huggingface-api
+llama-index-embeddings-huggingface==0.5.1
+llama-index-embeddings-huggingface-api==0.3.0
 # HF LLMs
-llama-index-llms-huggingface
-llama-index-llms-huggingface-api
+llama-index-llms-huggingface==0.4.2
+llama-index-llms-huggingface-api==0.3.1
 
-fastapi
-faiss-cpu
-llama-index-vector-stores-faiss
-llama-index-vector-stores-chroma
-llama-index-vector-stores-azurecosmosmongo
-uvicorn
-asyncio
-aiorwlock
+fastapi==0.115.12
+faiss-cpu==1.10.0
+llama-index-vector-stores-faiss==0.3.0
+llama-index-vector-stores-chroma==0.4.1
+llama-index-vector-stores-azurecosmosmongo==0.4.0
+uvicorn==0.34.0
+asyncio==3.4.3
+aiorwlock==1.5.0
 httpx==0.27.0
 
-tree-sitter
-tree_sitter_languages
-tree-sitter-language-pack
+tree-sitter==0.23.2
+tree_sitter_languages==1.10.2
+tree-sitter-language-pack==0.7.3
