--- a/presets/workspace/dependencies/requirements-test.txt
+++ b/presets/workspace/dependencies/requirements-test.txt
@@ -2,7 +2,7 @@
 -r requirements.txt
 
 # Test dependencies
-pytest
-httpx
-peft
-requests
+pytest==8.3.4
+httpx==0.27.0
+peft==0.10.0
+requests==2.32.3
