--- a/presets/ragengine/requirements.txt
+++ b/presets/ragengine/requirements.txt
@@ -20,3 +20,5 @@ httpx==0.27.0
 tree-sitter==0.23.2
 tree_sitter_languages==1.10.2
 tree-sitter-language-pack==0.7.3
+# Metrics collection
+prometheus-client>=0.17.0
