--- a/.github/workflows/preset-image-build-1ES.yml
+++ b/.github/workflows/preset-image-build-1ES.yml
@@ -146,10 +146,9 @@ jobs:
 
       - name: Ensure Python is Installed
         run: |
-          if ! command -v python3 &> /dev/null; then
-            sudo apt-get update
-            sudo apt-get install -y python3
-          fi
+          sudo apt-get update
+          sudo apt-get install -y python3
+          sudo apt install python3-pip -y
 
       - name: Ensure git and git LFS is Installed
         run: |
