--- a/.github/workflows/publish-rag-service-gh-image.yml
+++ b/.github/workflows/publish-rag-service-gh-image.yml
@@ -97,10 +97,11 @@ jobs:
 
       - name: Build image
         run: |
-          make docker-build-rag-service
+          OUTPUT_TYPE=type=registry make docker-build-ragservice
         env:
-          REGISTRY: ${{ env.REGISTRY }}
-          RAGENGINE_SERVICE_IMG_NAME: ${{ env.IMAGE_NAME }}
+          VERSION: ${{ needs.check-tag.outputs.tag }}
+          REGISTRY: ${{ steps.get-registry.outputs.registry_repository }}
+          RAGENGINE_SERVICE_IMG_NAME: kaito-rag-service
           RAGENGINE_SERVICE_IMG_TAG: ${{ needs.check-tag.outputs.tag }}
 
       - name: Scan ${{ steps.get-registry.outputs.registry_repository }}/${{ env.IMAGE_NAME }}:${{ env.IMG_TAG }}
@@ -116,3 +117,14 @@ jobs:
         env:
           TRIVY_USERNAME: ${{ github.actor }}
           TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+
+  publish-mcr-image:
+    runs-on: ubuntu-latest
+    needs: [ check-tag, build-scan-publish-gh-images ]
+    steps:
+      - name: 'Dispatch rag service MCR publishing'
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event-type: publish-rag-service-mcr-image
+          client-payload: '{"tag": "${{ needs.check-tag.outputs.tag }}"}'
