--- a/.github/workflows/publish-rag-service-gh-image.yml
+++ b/.github/workflows/publish-rag-service-gh-image.yml
@@ -102,7 +102,7 @@ jobs:
           VERSION: ${{ needs.check-tag.outputs.tag }}
           REGISTRY: ${{ steps.get-registry.outputs.registry_repository }}
           RAGENGINE_SERVICE_IMG_NAME: kaito-rag-service
-          RAGENGINE_SERVICE_IMG_TAG: ${{ needs.check-tag.outputs.tag }}
+          RAGENGINE_SERVICE_IMG_TAG: ${{ env.IMG_TAG }}
 
       - name: Scan ${{ steps.get-registry.outputs.registry_repository }}/${{ env.IMAGE_NAME }}:${{ env.IMG_TAG }}
         uses: aquasecurity/trivy-action@master
@@ -118,9 +118,19 @@ jobs:
           TRIVY_USERNAME: ${{ github.actor }}
           TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
+  run-e2e-gh-image:
+    needs: [ check-tag, build-scan-publish-gh-images ]
+    uses: ./.github/workflows/ragengine-e2e-workflow.yml
+    with:
+      git_sha: ${{ github.sha }}
+      isRelease: true
+      registry: ${{ needs.build-scan-publish-gh-images.outputs.registry_repository }}
+      k8s_version: ${{ vars.AKS_K8S_VERSION }}
+      tag: ${{ needs.check-tag.outputs.tag }}
+
   publish-mcr-image:
     runs-on: ubuntu-latest
-    needs: [ check-tag, build-scan-publish-gh-images ]
+    needs: [ check-tag, run-e2e-gh-image ]
     steps:
       - name: 'Dispatch rag service MCR publishing'
         uses: peter-evans/repository-dispatch@v3
