--- a/.github/workflows/publish-workspace-mcr-image.yml
+++ b/.github/workflows/publish-workspace-mcr-image.yml
@@ -1,7 +1,7 @@
 name: Publish KAITO MCR image
 on:
   repository_dispatch:
-    types: [ publish-mcr-image ]
+    types: [ publish-workspace-mcr-image ]
 
 permissions:
   contents: write
