Update Chart.yaml annotations
Signed-off-by: Chloe Lim <chloelim608@gmail.com>

--- a/charts/kaito/workspace/Chart.yaml
+++ b/charts/kaito/workspace/Chart.yaml
@@ -23,12 +23,13 @@ maintainers:
     email: hebaelayoty@gmail.com
   - name: ishaansehgal99
     email: ishaanforthewin@gmail.com
-category: ai-machine-learning
-license: MIT License
-links: |
-  - name: GitHub
-      url: https://github.com/kaito-project/kaito
-  - name: Examples
-    url: https://github.com/kaito-project/kaito/tree/main/examples
-prerelease: "false"
+annotations:
+  category: ai-machine-learning
+  license: MIT License
+  links: |
+    - name: GitHub
+        url: https://github.com/kaito-project/kaito
+    - name: Examples
+      url: https://github.com/kaito-project/kaito/tree/main/examples
+  prerelease: "false"
   
