--- a/charts/kaito/workspace/Chart.yaml
+++ b/charts/kaito/workspace/Chart.yaml
@@ -25,7 +25,7 @@ maintainers:
     email: ishaanforthewin@gmail.com
 annotations:
   artifacthub.io/category: ai-machine-learning
-  artifacthub.io/license: MIT License
+  artifacthub.io/license: MIT
   artifacthub.io/links: |
     - name: GitHub
         url: https://github.com/kaito-project/kaito
